<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_pregnant_woman_24"
        app:title="@string/settings_gestation_title">

        <EditTextPreference
            app:defaultValue="@integer/default_gestation_min"
            app:key="pref_key_gestation_min"
            app:title="@string/settings_gestation_min_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="@integer/default_gestation_max"
            app:key="pref_key_gestation_max"
            app:title="@string/settings_gestation_max_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_date_range_24"
        app:title="@string/settings_days_title">

        <EditTextPreference
            app:defaultValue="@integer/default_days_to_fecundation"
            app:key="pref_key_days_to_fecundation"
            app:title="@string/settings_days_to_fecundation_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_info_24"
        app:title="@string/settings_about_application">

        <Preference
            app:key="settings_version"
            app:selectable="false"
            app:title="@string/settings_about_version_title" />

        <Preference
            app:key="settings_build"
            app:selectable="false"
            app:title="@string/settings_about_build_title" />
    </PreferenceCategory>

</PreferenceScreen>